--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
+    "react-custom-alert": "^1.0.4",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
     "react-jigsaw-puzzle": "^1.0.5",
